@@ -23,6 +23,10 @@
           {
             "@id": "https://www.reddit.com/r/EarthPorn/comments/vtpys2/after_a_long_hike_in_the_rain_we_got_rewarded/",
             "image": "https://i.redd.it/yxojg4qjh8a91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/EarthPorn/comments/vtz4mw/moonset_at_yosemite_oc_2121x2828/",
+            "image": "https://external-preview.redd.it/v_nNQaxzTpzTLRP95EpM_ZMtjj2ObFz5kE6LT200424.jpg?auto=webp&s=e5bd8080386a93cc2109f0618cefd2958a9d9023"
           }
         ],
         "previous": "../melbot_20220707/",
@@ -47,6 +51,19 @@
             </div>
           </div>
           <hr />
+        `
+      }
+
+      function Bookmark (props) {
+        let uri = props.uri || '#'
+        let title = props.title || 'bookmark'
+        let image = props.image || '#'
+        return html`
+          <td>
+            <img height="200" src="${image}" /> ${'\n'}
+            <br />
+            <a style="color: blue" href="${uri}" target="_blank">reddit 🔗</a>
+          </td>
         `
       }
 
@@ -88,14 +105,22 @@
                   </pre>
 
           <h4>Bookmarks</h4>
-          <pre>
-                  <img height=200 src="${bookmarks[0]
-            .image}"/> ${'\n'} <a style="color: blue" href="${bookmarks[0][
-            '@id'
-          ]}" target="_blank">${bookmarks[0]['@id']}</a>
-                </pre>
+
+          <table>
+            <tr>
+              <${Bookmark}
+                uri="${bookmarks[0]['@id']}"
+                image="${bookmarks[0].image}"
+              />
+              <${Bookmark}
+                uri="${bookmarks[1]['@id']}"
+                image="${bookmarks[1].image}"
+              />
+            </tr>
+          </table>
 
           <footer>
+            |
             <a
               style="color: blue"
               href="https://gitmark.info/${di.data.gitmark['@id'].split(
@@ -104,6 +129,7 @@
               target="_blank"
               >${di.data.gitmark['@id']}</a
             >
+            |
           </footer>
         `,
         document.body
